@@ -225,3 +225,5 @@ b5081|dangling_edges|1
 b5081|faces|1
 b5234.0|1
 b5234.1|1
+t5568|invalidities at start|
+t5568|invalidities at end|
